--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app",
   "version": "0.1.0",
-  "homepage": "https://username.github.io/my-todo",
+  "homepage": "https://ludovil.github.io/my-todo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
